--- a/src/component/home/home.css
+++ b/src/component/home/home.css
@@ -20,7 +20,7 @@
     color: var(--title-color-dark);
 }
 .home__img {
-    background-image: url(../../Assets//profile.jpg);
+    background-image: url(https://t4.ftcdn.net/jpg/05/49/98/39/360_F_549983970_bRCkYfk0P6PP5fKbMhZMIb07mCJ6esXL.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
